[gd_scene load_steps=14 format=3 uid="uid://dk005nbfi2jb4"]

[ext_resource type="Script" path="res://Scripts/test_world.gd" id="1_ss1a7"]
[ext_resource type="PackedScene" uid="uid://d3bhlb6x0ro8f" path="res://Scenes/arrow.tscn" id="2_ddbtc"]
[ext_resource type="Shader" path="res://Shaders/cut_sphere.gdshader" id="3_8ola2"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_rgip2"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_lq5dr"]
sky_material = SubResource("ProceduralSkyMaterial_rgip2")

[sub_resource type="Environment" id="Environment_8deh4"]
background_mode = 2
sky = SubResource("Sky_lq5dr")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="PlaneMesh" id="PlaneMesh_rijia"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sqnjr"]
render_priority = 0
shader = ExtResource("3_8ola2")
shader_parameter/spherePos = Vector3(-0.0229173, 0.882407, 0.00237012)
shader_parameter/borderColor = Color(0.810186, 0, 0.150926, 1)
shader_parameter/borderSize = 0.038
shader_parameter/sphereRadius = 2.0
shader_parameter/noiseSpeed = 0.905
shader_parameter/noiseStrength = 0.505
shader_parameter/noiseSize = 2.0
shader_parameter/invertCut = null

[sub_resource type="SphereMesh" id="SphereMesh_0gtrj"]

[sub_resource type="SphereMesh" id="SphereMesh_8ejct"]
flip_faces = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_olq6i"]
render_priority = 0
shader = ExtResource("3_8ola2")
shader_parameter/spherePos = Vector3(-0.0229173, 0.882407, 0.00237012)
shader_parameter/borderColor = Color(0.810186, 0, 0.150926, 1)
shader_parameter/borderSize = 0.038
shader_parameter/sphereRadius = 2.0
shader_parameter/noiseSpeed = 0.905
shader_parameter/noiseStrength = 0.505
shader_parameter/noiseSize = 2.0
shader_parameter/invertCut = null

[sub_resource type="BoxMesh" id="BoxMesh_oj4ue"]

[sub_resource type="BoxMesh" id="BoxMesh_vb4bv"]
flip_faces = true

[node name="Node3D" type="Node3D"]
script = ExtResource("1_ss1a7")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_8deh4")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.88257, -0.134852, -0.450427, 0.47018, 0.253129, 0.845492, 0, -0.957988, 0.286809, 6.04493, 3.76242, 0)

[node name="Floor" type="CSGMesh3D" parent="."]
transform = Transform3D(8, 0, 0, 0, 4, 0, 0, 0, 8, 0, 0, 0)
use_collision = true
mesh = SubResource("PlaneMesh_rijia")

[node name="Arrow" parent="." instance=ExtResource("2_ddbtc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0229173, 0.882407, 0.00237012)
noiseSpeed = 0.905
noiseStrength = 0.505
borderColor = Color(0.810186, 0, 0.150926, 1)

[node name="Meshes" type="Node3D" parent="."]

[node name="Ball" type="MeshInstance3D" parent="Meshes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.10072, 1.07935, 1.60094)
material_override = SubResource("ShaderMaterial_sqnjr")
mesh = SubResource("SphereMesh_0gtrj")
skeleton = NodePath("../..")

[node name="Ball2" type="MeshInstance3D" parent="Meshes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.10072, 1.07935, 1.60094)
material_override = SubResource("ShaderMaterial_sqnjr")
mesh = SubResource("SphereMesh_8ejct")
skeleton = NodePath("../..")

[node name="Cube" type="MeshInstance3D" parent="Meshes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.40626, 0.552275, -1.4943)
material_override = SubResource("ShaderMaterial_olq6i")
mesh = SubResource("BoxMesh_oj4ue")
skeleton = NodePath("../..")

[node name="Cube2" type="MeshInstance3D" parent="Meshes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.40626, 0.552275, -1.4943)
material_override = SubResource("ShaderMaterial_olq6i")
mesh = SubResource("BoxMesh_vb4bv")
skeleton = NodePath("../..")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -80.5
offset_right = 44.0
offset_bottom = 80.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Ip"
alignment = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Scenes/player.tscn")
spawn_path = NodePath("../Meshes")

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
